--- a/_tsconfig.json
+++ b/_tsconfig.json
@@ -15,6 +15,8 @@
   },
   "ts-node": {
     "transpileOnly": true,
-    "require": ["tsconfig-paths/register"]
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
